bug/fix-whitespace-clicking-workflowform

--- a/src/app/dataset/workflow/workflow.component.scss
+++ b/src/app/dataset/workflow/workflow.component.scss
@@ -11,6 +11,10 @@
     -webkit-box-shadow: inset 1px 0 5px 2px rgba(55, 185, 139, .3);
     box-shadow: inset 1px 0 5px 2px rgba(55, 185, 139, .3);
   }
+
+ .form-group label + input[type="checkbox"] {
+    flex: initial;
+ }
 }
 
 .form-fields.inactive {
